--- a/package.json
+++ b/package.json
@@ -8,12 +8,18 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "inflate": "0.0.7",
+    "three": "^0.95.0",
+    "three-fbx-loader": "^1.0.3",
+    "three-fbxloader-offical": "^1.0.0",
+    "three-orbitcontrols": "^2.1.2",
     "vue": "^2.5.17"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.0.0",
     "@vue/cli-plugin-eslint": "^3.0.0",
     "@vue/cli-service": "^3.0.0",
+    "raw-loader": "^0.5.1",
     "vue-template-compiler": "^2.5.17"
   },
   "eslintConfig": {
