--- a/package.json
+++ b/package.json
@@ -8,12 +8,15 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "dat.gui": "^0.7.3",
     "inflate": "0.0.7",
     "stats.js": "^0.17.0",
     "three": "^0.95.0",
+    "three-dragcontrols": "^0.88.2",
     "three-fbx-loader": "^1.0.3",
     "three-fbxloader-offical": "^1.0.0",
     "three-orbitcontrols": "^2.1.2",
+    "three-transformcontrols": "^0.78.1",
     "vue": "^2.5.17",
     "vue-router": "^3.0.1"
   },
